Issue: overflow not working on mobile; (solved) put the property in the specific wrap instead of body or html

--- a/STYLE/index.css
+++ b/STYLE/index.css
@@ -239,6 +239,7 @@ SECTION H2 {
   justify-content: center;
   padding: 50px;
   border: 1px solid rgba(255, 255, 255, 0.25);
+  overflow: hidden;
 }
 
 .about {
